application/~repository/gitlab/gitlab-ce.deploy+pvc.gitlab.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gitlab-ce
  labels:
    app: gitlab-ce
  namespace: gitlab
spec:
  replicas: 1
  template:
    metadata:
      name: gitlab-ce
      labels:
        app: gitlab-ce
    spec:
      containers:
      - name: gitlab-ce
        image: gitlab/gitlab-ce:10.0.3-ce.0
        ports:
        - name: ssh
          containerPort: 22
        - name: http
          containerPort: 80
        resources:
          requests:
            cpu: 4000m
            memory: 12Gi
          limits:
            cpu: 5000m
            memory: 16Gi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 180
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 180
          timeoutSeconds: 5
        volumeMounts:
        - name: config
          mountPath: /etc/gitlab
        - name: data
          mountPath: /var/opt/gitlab
      volumes:
      - name: config
        configMap:
          name: gitlab-config
      - name: data
        persistentVolumeClaim:
          claimName: gitlab-pvc
